--- a/public/html/index(backup).html
+++ b/public/html/index(backup).html
@@ -6,7 +6,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/css/style.css" rel="stylesheet" />
-  <link href="/css/footer.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -29,20 +28,9 @@
     </div>
   </div>
 
-  <footer>
-        <div class="footer-content">
+  <footer id="footer">
 
-            <h2>Audio Cave</h2>
-
-            <p>A place to relax and listen</p>
-
-            <ul class="links">
-              <li><a href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-            </ul>
-        </div>
-</footer>
+  </footer>
 
   <script src="js/client.js"></script>
 </body>
