Created registration page, redirecting to and from login/register. Working javascript to write to user table when registering and printing error message when an email has already been used to register.

--- a/public/html/main.html
+++ b/public/html/main.html
@@ -1,30 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Landing Page</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/img/Popcorn.png" rel="icon" type="image/x-icon" />
-    <link href="/css/style.css" rel="stylesheet"/>
-  </head>
-  <body class="container">
-    <div class="menu">
-      <ul>
-        <li>Home</li>
-        <li>Profile</li>
-        <li>Survey</li>
-        <li>Contact</li>
-      </ul>
-    </div>
-    <header>
-      <h1>Main Page</h1>
-    </header>
-    <div>
-
-    </div>
 
 <head>
-  <title></title>
+  <title>Main</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/img/Popcorn.png" rel="icon" type="image/x-icon" />
@@ -46,5 +24,4 @@
 
   <script src="/js/client.js"></script>
 </body>
-
 </html>
