--- a/public/html/index.html
+++ b/public/html/index.html
@@ -22,6 +22,7 @@
         <input id="password" type="password" required="required" placeholder="Password" value="notabc123" />
         <br><br><br>
         <input type="button" value="Login" id="submit" />
+        <input type="button" value="Register" id="register" />
         <p><span id="serverMsg"></span></p>
         <p id="errorMsg">&nbsp;</p>
       </form>
