--- a/public/html/admindashboard.html
+++ b/public/html/admindashboard.html
@@ -2,24 +2,43 @@
 <html>
 
 <head>
-    <title>Web App</title>
+    <title>Admin Dashboard</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../css/admindashboard.css" rel="stylesheet" />
+    <link href="/css/admindashboard.css" rel="stylesheet" />
 </head>
 
 <body>
     <header>
-        <h1>Web App</h1>
+        <h1>Dashboard</h1>
     </header>
 
-    <p></p>
+    <form id="LogOut" action="/logout" method="get">
+        <input type="submit" value="Logout">
+    </form>
+
+    <div id="Dashboard">
+        <div class="users" id="regular">
+            <p>Regular</p>
+            <p>First Name  |  Last Name  |  Email  |  Username  |  Age  |  Personality</p>
+            <div id="regularInfo">
+
+            </div>
+        </div>
+        <div class="users" id="admins">
+            <p>Admins</p>
+            <p>First Name  |  Last Name  |  Email  |  Username  |  Age  |  Personality</p>
+            <div id="adminInfo">
+
+            </div>
+        </div>
+    </div>
 
     <footer id="footer">
 
     </footer>
 
-    <script src="js/admindashboard.js"></script>
+    <script src="../js/admindashboard.js"></script>
 </body>
 
 </html>
