--- a/public/html/index.html
+++ b/public/html/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Web App</title>
+  <title>AudioCave</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/css/style.css" rel="stylesheet" />
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Web App</h1>
+    <h1>Welcome to the AudioCave</h1>
   </header>
 
   <div id="Left">
