--- a/public/html/main.html
+++ b/public/html/main.html
@@ -5,23 +5,29 @@
   <title>Main</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+  </style>
   <link href="/img/Popcorn.png" rel="icon" type="image/x-icon" />
-  <link href="/css/style.css" rel="stylesheet" />
+  <link href="/css/main.css" rel="stylesheet" />
 </head>
 
 <body>
-  <header>
-    <h1>Main Page</h1>
-  </header>
+  <div id="general-container">
+    <header>
+      <h1>Main Page</h1>
+    </header>
 
-  <form id="LogOut" action="/logout" method="get">
-    <input type="submit" value="Logout">
-  </form>
+    <form id="LogOut" action="/logout" method="get">
+      <input type="submit" value="Logout">
+    </form>
 
-  <footer id="footer">
+    <footer id="footer">
 
-  </footer>
-
-  <script src="/js/client.js"></script>
+    </footer>
+  </div>
+  <script src="/js/main.js"></script>
 </body>
+
 </html>
