--- a/public/html/login.html
+++ b/public/html/login.html
@@ -24,10 +24,15 @@
     <form id="loginForm">
       <input id="email" class="input-text" type="email" required="required" placeholder="Email" />
       <input id="password" class="input-text" type="password" required="required" placeholder="Password" />
-      <div id="login-row"><input id="save-login" type="checkbox" value="SavePassword">
-        <label for="save-login">Remember me</label>
-        <input id="submit" type="button" value="Login" /></div>
-      <input id="register" type="button" value="Register" />
+      <div id="login-row">
+        <div id="remember-me">
+          <input id="save-login" type="checkbox" value="SavePassword">
+          <label for="save-login">Remember me</label>
+        </div>
+        <input id="submit" type="button" value="LOG IN" /></div>
+      <br>
+      <label for="register">Don't have an account?</label>
+      <input id="register" type="button" value="SIGN UP FOR AUDIOCAVE" />
       <p><span id="serverMsg"></span></p>
       <p id="errorMsg">&nbsp;</p>
     </form>
