Fixed bug - Login Credential was saved without checking Remember me

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -26,7 +26,7 @@
       <input id="password" class="input-text" type="password" required="required" placeholder="Password" />
       <div id="login-row">
         <div id="remember-me">
-          <input id="save-login" type="checkbox" value="SavePassword">
+          <input id="save-login" type="checkbox" value="RememebrMe">
           <label for="save-login">Remember me</label>
         </div>
         <input id="submit" type="button" value="LOG IN" /></div>
