Media Queries under 768px

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -22,8 +22,8 @@
     </div>
 
     <form id="loginForm">
-      <input id="email" class="input-text" type="email" required="required" placeholder="Email" />
-      <input id="password" class="input-text" type="password" required="required" placeholder="Password" />
+      <input id="email" type="email" placeholder="Email" required/>
+      <input id="password" type="password" placeholder="Password" required/>
       <div id="login-row">
         <div id="remember-me">
           <input id="save-login" type="checkbox" value="RememebrMe">
