--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -21,38 +21,38 @@
       <div class="input-name">
         <div class="input">
           <label>First Name</label>
-          <input type="text" name="fname" class="form input-text" id="fname" placeholder="John" required="required">
+          <input id="fname" name="fname" type="text" placeholder="John" required>
         </div>
         <div class="input">
           <label>Last Name</label>
-          <input type="text" name="lname" class="form input-text" id="lname" placeholder="Doe" required="required">
+          <input id="lname" name="lname" type="text" placeholder="Doe" required>
         </div>
       </div>
       <div class="input">
         <label>Email</label>
-        <input type="email" name="email" class="form input-text" id="email" placeholder="email@email.com" required="required">
+        <input id="email" name="email" type="email" placeholder="email@email.com" required>
       </div>
       <div class="input">
         <label>Password</label>
-        <input type="text" name="password" class="form input-text" id="password" placeholder="********" required="required">
+        <input id="password" name="password" type="text" placeholder="********" required>
       </div>
       <div class="input">
         <label>Username</label>
-        <input type="text" name="username" class="form input-text" id="username" placeholder="JDoe" required="required">
+        <input id="username" name="username" type="text" placeholder="JDoe" required>
       </div>
       <div class="input">
         <label>MBTI Personality</label>
-        <input type="text" name="mbti" class="form input-text" id="mbti" placeholder="INFJ" required="required">
+        <input id="mbti" name="mbti" type="text" placeholder="INFJ" required>
       </div>
       <div class="input">
         <label>Age</label>
-        <input type="text" name="age" class="form input-text" id="age" placeholder="24" required="required">
+        <input id="age" name="age" type="text" placeholder="24" required>
       </div>
       <div id="error">
         <p><span id="serverMsg"></span></p>
         <p id="errorMsg">&nbsp;</p>
       </div>
-      <input type="button" value="REGISTER" id="submit" />
+      <input id="submit" type="button" value="REGISTER" />
       <div id="login-row">
         <label for="login">Already have an account?</label>
         <input id="login" type="button" value="LOG IN" />
