--- a/public/html/userprofile.html
+++ b/public/html/userprofile.html
@@ -13,7 +13,29 @@
         <h1>Web App</h1>
     </header>
 
-    <p></p>
+    <div>
+        <form name="profile" action="/updateprofile" method="post">
+            <div>
+                <label for="username">Username</label>
+            </div>            
+            <input class="username" id="username" name="username" type="text" value="" />
+            <div>
+                <label for="email">email</label>
+            </div>
+            <input id="email" name="email" type="email" value="" />
+            <div>
+                <label for="password">password</label>
+            </div>
+            <input id="password" name="password" type="password" value="" />
+            <div>
+                <label for="age">password</label>
+            </div>
+            <input id="age" name="age" type="text" value="" />
+            <br>
+            <br>
+            <input id="submit" type="button" value="EDIT PROFILE" />
+        </form>
+    </div>
 
     <footer id="footer">
 
