Added feature to edit users' information from dashboard

--- a/public/html/admindashboard.html
+++ b/public/html/admindashboard.html
@@ -56,14 +56,14 @@
     <div id="Dashboard">
         <div class="users" id="regular">
             <p>Regular</p>
-            <p>First Name  |  Last Name  |  Email  |  Username  |  Age  |  Personality</p>
+            <p>First Name  |  Last Name  |  Email  |  Password  |  Role  |  Username  |  Age  |  Personality</p>
             <div id="regularInfo">
 
             </div>
         </div>
         <div class="users" id="admins">
             <p>Admins</p>
-            <p>First Name  |  Last Name  |  Email  |  Username  |  Age  |  Personality</p>
+            <p>First Name  |  Last Name  |  Email  |  Password  |  Role  |  Username  |  Age  |  Personality</p>
             <div id="adminInfo">
 
             </div>
