added functioning javascript to display music recommendations and song info when you click the music recommendation

--- a/public/html/songinfo.html
+++ b/public/html/songinfo.html
@@ -31,7 +31,7 @@
 
     </footer>
   </div>
-  <script src="/js/musicsuggestion.js"></script>
+  <script src="/js/songinfo.js"></script>
   <script src="/js/main.js"></script>
 </body>
 
