--- a/public/html/main.html
+++ b/public/html/main.html
@@ -9,24 +9,58 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
   </style>
+  <script src="https://kit.fontawesome.com/3da2767e3a.js" crossorigin="anonymous"></script>
   <link href="/img/Popcorn.png" rel="icon" type="image/x-icon" />
   <link href="/css/main.css" rel="stylesheet" />
 </head>
 
 <body>
   <div id="general-container">
-    <header>
-      <h1>Main Page</h1>
-    </header>
-
-    <form id="LogOut" action="/logout" method="get">
-      <input type="submit" value="Logout">
-    </form>
-
-    <footer id="footer">
-
-    </footer>
+    <div id="left-bar">
+      <br>
+      <div id="logo">
+        <img src="/img/AudioCAve_Logo_Blue_Red.png" alt="">
+        <h1>Audiocave</h1>
+      </div>
+      <br>
+      <div id="menu">
+        <a href="/">
+          <i class="fa-solid fa-house"></i>
+          <p>Home</p>
+        </a>
+        <a href="/search">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <p>Search</p>
+        </a>
+        <a href="/library">
+          <i class="fa-solid fa-book"></i>
+          <p>Library</p>
+        </a>
+        <a href="/profile">
+          <i class="fa-solid fa-user"></i>
+          <p>Profile</p>
+        </a>
+        <a href="/new">
+          <i class="fa-solid fa-compact-disc"></i>
+          <p>New Albums</p>
+        </a>
+        <a href="/survey">
+          <i class="fa-solid fa-file-pen"></i>
+          <p>Survey</p>
+        </a>
+      </div>
+      <br>
+      <a href="/logout">Logout</a>
+      <br>
+    </div>
+    <div id="main">
+      <p>main</p>
+    </div>
+    <div id="right-bar">
+      <p>right</p>
+    </div>
   </div>
+
   <script src="/js/main.js"></script>
 </body>
 
