changed one survey option

--- a/public/html/survey.html
+++ b/public/html/survey.html
@@ -29,7 +29,7 @@
             <form id="daily-survey" action="/daily-survey" method="post">
                 <div class="modal-body">
                     <h2>How are you feeling today?</h2>
-                    <input type="radio" id="confident" name="mood" value="Confident">
+                    <input type="radio" id="angry" name="mood" value="Confident">
                     <label for="confident">Confident</label><br>
                     <input type="radio" id="excited" name="mood" value="Excited">
                     <label for="confident">Excited</label><br>
