Made some changes to the way users' information is displayed for css flexibility

--- a/public/html/admindashboard.html
+++ b/public/html/admindashboard.html
@@ -56,14 +56,29 @@
     <div id="Dashboard">
         <div class="users" id="regular">
             <p>Regular</p>
-            <p>First Name  |  Last Name  |  Email  |  Password  |  Role  |  Username  |  Age  |  Personality</p>
+            <p>Admins</p>
+            <p>First Name</p>
+            <p>Last Name</p>
+            <p>Email</p>
+            <p>Password</p>
+            <p>Role</p>
+            <p>Username</p>
+            <p>Age</p>
+            <p>Personality</p>
             <div id="regularInfo">
 
             </div>
         </div>
         <div class="users" id="admins">
             <p>Admins</p>
-            <p>First Name  |  Last Name  |  Email  |  Password  |  Role  |  Username  |  Age  |  Personality</p>
+            <p>First Name</p>
+            <p>Last Name</p>
+            <p>Email</p>
+            <p>Password</p>
+            <p>Role</p>
+            <p>Username</p>
+            <p>Age</p>
+            <p>Personality</p>
             <div id="adminInfo">
 
             </div>
