--- a/public/html/userprofile.html
+++ b/public/html/userprofile.html
@@ -9,48 +9,67 @@
 </head>
 
 <body>
-    <header>
-        <h1>Web App</h1>
-    </header>
 
-    <div id="container">
-        <form id="upload-images-form">
-          <input id="image-upload" type="file" value="Upload Image" accept="image/png, image/gif, image/jpeg" multiple="multiple"/>
-          <input id="submit" type="submit" value="Submit"/>
-        </form>
-      </div>
+    <div id="general-container">
+        <div id="header-container">
+            <header>
+                <img id="logo" src="/img/AudioCave_Logo_Blue_Red.png" alt="">
+                <h1>Audio Cave</h1>
+            </header>
+        </div>
 
-      <div>
-          <img id="profile-picture" class="image" src="./img/default.img" alt="User Profile">
-      </div>
+        <div class="center">
+            <form class="info" id="upload-images-form">
+                <div>
+                    <div class="upload-btn-wrapper">
+                        <button class="btn">Upload a Profile Picture</button>
+                        <input id="image-upload" type="file" value="Upload Image"
+                            accept="image/png, image/gif, image/jpeg" multiple="multiple" />
+                        <br>
+                        <input id="submit" type="submit" value="Submit" />
 
-    <div>
-        <form name="profile" action="/updateprofile" method="post">
-            <div>
-                <label for="username">Username</label>
-            </div>            
-            <input class="username" id="username" name="username" type="text" value="" />
-            <div>
-                <label for="email">email</label>
-            </div>
-            <input id="email" name="email" type="email" value="" />
-            <div>
-                <label for="password">password</label>
-            </div>
-            <input id="password" name="password" type="password" value="" />
-            <div>
-                <label for="age">password</label>
-            </div>
-            <input id="age" name="age" type="text" value="" />
-            <br>
-            <br>
-            <input id="edit" type="button" value="EDIT PROFILE" />
-        </form>
+                    </div>
+                </div>
+
+
+
+
+            </form>
+        </div>
+
+        <div>
+            <img class="image" src="./img/default.img" alt="User Profile" id="profile-picture">
+        </div>
+
+        <div class="center">
+            <form name="profile" action="/updateprofile" method="post" class="info">
+                <div>
+                    <label for="username">Username</label>
+                </div>
+                <input class="username" id="username" name="username" type="username" value="" />
+                <div>
+                    <label for="email">email</label>
+                </div>
+                <input id="email" name="email" type="email" value="" />
+                <div>
+                    <label for="password">password</label>
+                </div>
+                <input id="password" name="password" type="password" value="" />
+                <div>
+                    <label for="age">age</label>
+                </div>
+                <input id="age" name="age" type="age" value="" />
+                <br>
+                <br>
+                <input id="edit" type="button" value="EDIT PROFILE" />
+            </form>
+        </div>
+
+        <footer id="footer">
+
+        </footer>
     </div>
 
-    <footer id="footer">
-
-    </footer>
 
     <script src="js/userprofile.js"></script>
 </body>
