--- a/public/html/admindashboard.html
+++ b/public/html/admindashboard.html
@@ -2,9 +2,14 @@
 <html>
 
 <head>
+
   <title>Admin Dashboard</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+  </style>
   <link href="/css/admindashboard.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -20,6 +25,16 @@
     </div>
 
     <div id="userForm">
+      <div class="legends">
+        <h3>First Name</h3>
+        <h3>Last Name</h3>
+        <h3>Email</h3>
+        <h3>Password</h3>
+        <h3>Username</h3>
+        <h3>Role</h3>
+        <h3>Age</h3>
+        <h3>Personality</h3>
+      </div>
       <form id="addUserForm" action="/addUser" method="post">
         <input type="text" name="fname" placeholder="First Name" id="addFirstName" required>
         <input type="text" name="lname" placeholder="Last Name" id="addLastName" required>
@@ -55,35 +70,39 @@
     </div>
 
     <div id="dashboard">
-      <div id="regular">
+      <div class="user-info">
         <div class="legends">
-          <p>First Name</p>
-          <p>Last Name</p>
-          <p>Email</p>
-          <p>Password</p>
-          <p>Role</p>
-          <p>Username</p>
-          <p>Age</p>
-          <p>Personality</p>
+          <h3>First Name</h3>
+          <h3>Last Name</h3>
+          <h3>Email</h3>
+          <h3>Password</h3>
+          <h3>Username</h3>
+          <h3>Role</h3>
+          <h3>Age</h3>
+          <h3>Personality</h3>
         </div>
-        <div id="regularInfo">
+        <div class="user-container" id="regularInfo">
         </div>
       </div>
 
-      <div id="admins">
+      <div class="user-info">
         <div class="legends">
-          <p>First Name</p>
-          <p>Last Name</p>
-          <p>Email</p>
-          <p>Password</p>
-          <p>Role</p>
-          <p>Username</p>
-          <p>Age</p>
-          <p>Personality</p>
+          <h3>First Name</h3>
+          <h3>Last Name</h3>
+          <h3>Email</h3>
+          <h3>Password</h3>
+          <h3>Username</h3>
+          <h3>Role</h3>
+          <h3>Age</h3>
+          <h3>Personality</h3>
         </div>
-        <div id="adminInfo">
+        <div class="user-container" id="adminInfo">
         </div>
       </div>
+    </div>
+
+    <div id="logout">
+      <h1>Logout</h1>
     </div>
 
   </div>
