fixed a bug in userprofile page

--- a/public/html/userprofile.html
+++ b/public/html/userprofile.html
@@ -103,8 +103,8 @@
             <a href="/logout">Logout</a>
             <br>
         </div>
-
-        <div class="center">
+        <div id="main">
+                    <div class="center">
             <form class="info" id="upload-images-form">
                 <div>
                     <div class="upload-btn-wrapper">
@@ -154,14 +154,14 @@
             </div>
         </div>
 
-        <div>
-            <img class="image" src="./img/default.img" style="width:300px;height:300px" alt="User Profile" id="profile-picture">
-        </div>
+
 
 
         <footer id="footer">
 
         </footer>
+        </div>
+
     </div>
 
 
