--- a/public/html/userprofile.html
+++ b/public/html/userprofile.html
@@ -126,7 +126,7 @@
             </div>
 
             <div>
-                <img class="image" src="./img/default.img" alt="User Profile" id="profile-picture">
+                <img class="image" src="./img/default.img" alt="User Profile" style="width:300px;height:300px;" id="profile-picture">
             </div>
 
             <div class="center">
@@ -162,7 +162,6 @@
         </footer>
         </div>
 
-    </div>
 
 
     <script src="js/userprofile.js"></script>
