--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -43,6 +43,7 @@
       <div class="input">
         <label>MBTI Personality</label>
         <select name="mbti" id="mbti" required>
+          <option value="" disabled selected>Personality</option>
           <option value="ESTJ">ESTJ</option>
           <option value="ENTJ">ENTJ</option>
           <option value="ESFJ">ESFJ</option>
