--- a/public/html/userprofile.html
+++ b/public/html/userprofile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Web App</title>
@@ -108,10 +108,10 @@
             <form class="info" id="upload-images-form">
                 <div>
                     <div class="upload-btn-wrapper">
-                        <label>
-                            <input id="image-upload" type="file" value="Upload Image"
+                        <label class="btn">
+                            <input id="image-upload" type="file"
                             accept="image/png, image/gif, image/jpeg" multiple="multiple" />
-                            <p class="btn">Upload a Profile Picture</p>
+                            Upload a Profile Picture
                         </label>
                         <br>
                         <input id="submit" type="submit" value="Submit" />
@@ -134,7 +134,7 @@
                     <div>
                         <label for="username">Username</label>
                     </div>
-                    <input class="username" id="username" name="username" type="username" value="" />
+                    <input class="username" id="username" name="username" type="text" value="" />
                     <div>
                         <label for="email">email</label>
                     </div>
@@ -146,7 +146,7 @@
                     <div>
                         <label for="age">age</label>
                     </div>
-                    <input id="age" name="age" type="age" value="" />
+                    <input id="age" name="age" type="text" value="" />
                     <br>
                     <br>
                     <input id="edit" type="button" value="EDIT PROFILE" />
