--- a/public/html/survey.html
+++ b/public/html/survey.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <!-- To Implement Into Each Page When Clicking Survey in The Nav Bar-->
-<html>
+<html lang="en">
 
 <head>
     <title>Survey</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8"/>
     <link href="../css/survey.css" rel="stylesheet" />
 </head>
 
@@ -29,18 +30,18 @@
             <form id="daily-survey" action="/daily-survey" method="post">
                 <div class="modal-body">
                     <h2>How are you feeling today?</h2>
-                    <input type="radio" id="angry" name="mood" value="Confident">
-                    <label for="confident">Confident</label><br>
+                    <input type="radio" id="angry" name="mood" value="Angry">
+                    <label for="angry">Angry</label><br>
                     <input type="radio" id="excited" name="mood" value="Excited">
-                    <label for="confident">Excited</label><br>
+                    <label for="excited">Excited</label><br>
                     <input type="radio" id="happy" name="mood" value="Happy">
-                    <label for="confident">Happy</label><br>
+                    <label for="happy">Happy</label><br>
                     <input type="radio" id="neutral" name="mood" value="Neutral">
-                    <label for="confident">Neutral</label><br>
+                    <label for="neutral">Neutral</label><br>
                     <input type="radio" id="sad" name="mood" value="Sad">
-                    <label for="confident">Sad</label><br>
+                    <label for="sad">Sad</label><br>
                     <input type="radio" id="stressed" name="mood" value="Stressed">
-                    <label for="confident">Stressed</label><br>
+                    <label for="stressed">Stressed</label><br>
                     <button type="button" onclick="document.getElementById('myModal').style.display='none'" class="cancelbtn">Cancel</button>
                     <button id="submit-survey" type="button" class="submitbtn">Submit</button>
                 </div>
