fixed some broken links on the user profile, should redirect to main for now until we implement their features

--- a/public/html/userprofile.html
+++ b/public/html/userprofile.html
@@ -51,11 +51,13 @@
           <i class="fa-solid fa-house"></i>
           <p>Home</p>
         </a>
-        <a href="/search">
+        <!-- not implemented yet -->
+        <a href="/">
           <i class="fa-solid fa-magnifying-glass"></i>
           <p>Search</p>
         </a>
-        <a href="/library">
+        <!-- not implemented yet -->
+        <a href="/">
           <i class="fa-solid fa-book"></i>
           <p>Library</p>
         </a>
@@ -63,7 +65,8 @@
           <i class="fa-solid fa-user"></i>
           <p>Profile</p>
         </a>
-        <a href="/new">
+        <!-- not implemented yet -->
+        <a href="/">
           <i class="fa-solid fa-compact-disc"></i>
           <p>New Albums</p>
         </a>
