fixed some bugs about songinfo and changed database schema

--- a/public/html/main.html
+++ b/public/html/main.html
@@ -28,7 +28,7 @@
       <div id="top-menu">
         <a href="/">Home</a>
         <a href="/">Search</a>
-        <a href="/">Library</a>
+        <a href="/library">Library</a>
         <a href="/userprofile">Profile</a>
         <a href="/">New Albums</a>
         <a href="/">Survey</a>
@@ -55,8 +55,7 @@
           <i class="fa-solid fa-magnifying-glass"></i>
           <p>Search</p>
         </a>
-        <!-- not implemented yet -->
-        <a href="/">
+        <a href="/library">
           <i class="fa-solid fa-book"></i>
           <p>Library</p>
         </a>
