--- a/public/html/userprofile.html
+++ b/public/html/userprofile.html
@@ -53,8 +53,7 @@
           <i class="fa-solid fa-magnifying-glass"></i>
           <p>Search</p>
         </a>
-        <!-- not implemented yet -->
-        <a href="/">
+        <a href="/library">
           <i class="fa-solid fa-book"></i>
           <p>Library</p>
         </a>
