Added new album page where you can see the 5 latest albums, which redirects to song list and then song info

--- a/public/html/main.html
+++ b/public/html/main.html
@@ -30,8 +30,8 @@
         <a href="/">Search</a>
         <a href="/library">Library</a>
         <a href="/userprofile">Profile</a>
-        <a href="/">New Albums</a>
-        <a href="/">Survey</a>
+        <a href="/new">New Albums</a>
+        <a href="/survey">Survey</a>
         <a href="/logout">Logout</a>
       </div>
 
@@ -63,8 +63,7 @@
           <i class="fa-solid fa-user"></i>
           <p>Profile</p>
         </a>
-        <!-- not implemented yet -->
-        <a href="/">
+        <a href="/new">
           <i class="fa-solid fa-compact-disc"></i>
           <p>New Albums</p>
         </a>
