--- a/public/html/newalbums.html
+++ b/public/html/newalbums.html
@@ -31,7 +31,7 @@
         <a href="/library">Library</a>
         <a href="/userprofile">Profile</a>
         <a href="/new">New Albums</a>
-        <a href="/survey">Survey</a>
+        <a href="/surve">Survey</a>
         <a href="/logout">Logout</a>
       </div>
 
@@ -77,7 +77,8 @@
       <br>
     </div>
 
-    <div id="library">
+    <div id="new-albums">
+      
     </div>
 
     <div id="right-bar">
@@ -90,7 +91,7 @@
   </div>
   <script src="/js/musicsuggestion.js"></script>
   <script src="/js/main.js"></script>
-  <script src="/js/library.js"></script>
+  <script src="/js/newalbums.js"></script>
 </body>
 
 </html>
