Basic search bar/function implemented

--- a/public/html/library.html
+++ b/public/html/library.html
@@ -27,7 +27,7 @@
 
       <div id="top-menu">
         <a href="/">Home</a>
-        <a href="/">Search</a>
+        <a href="/search">Search</a>
         <a href="/library">Library</a>
         <a href="/userprofile">Profile</a>
         <a href="/new">New Albums</a>
@@ -50,8 +50,7 @@
           <i class="fa-solid fa-house"></i>
           <p>Home</p>
         </a>
-        <!-- not implemented yet -->
-        <a href="/">
+        <a href="/search">
           <i class="fa-solid fa-magnifying-glass"></i>
           <p>Search</p>
         </a>
