--- a/public/html/userprofile.html
+++ b/public/html/userprofile.html
@@ -25,11 +25,11 @@
 
       <div id="top-menu">
         <a href="/">Home</a>
-        <a href="/">Search</a>
-        <a href="/">Library</a>
+        <a href="/search">Search</a>
+        <a href="/library">Library</a>
         <a href="/userprofile">Profile</a>
-        <a href="/">New Albums</a>
-        <a href="/">Survey</a>
+        <a href="/new">New Albums</a>
+        <a href="/survey">Survey</a>
         <a href="/logout">Logout</a>
       </div>
 
@@ -48,8 +48,7 @@
           <i class="fa-solid fa-house"></i>
           <p>Home</p>
         </a>
-        <!-- not implemented yet -->
-        <a href="/">
+        <a href="/search">
           <i class="fa-solid fa-magnifying-glass"></i>
           <p>Search</p>
         </a>
@@ -61,8 +60,7 @@
           <i class="fa-solid fa-user"></i>
           <p>Profile</p>
         </a>
-        <!-- not implemented yet -->
-        <a href="/">
+        <a href="/new">
           <i class="fa-solid fa-compact-disc"></i>
           <p>New Albums</p>
         </a>
