--- a/public/html/userprofile.html
+++ b/public/html/userprofile.html
@@ -10,6 +10,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script src="https://kit.fontawesome.com/3da2767e3a.js" crossorigin="anonymous"></script>
   <link href="/img/Popcorn.png" rel="icon" type="image/x-icon" />
 </head>
@@ -122,6 +123,9 @@
           <input id="edit" type="button" value="EDIT PROFILE" />
         </form>
       </div>
+
+      <p id="errorMsg"></p>
+      <div id="userReviews"></div>
     </div>
   </div>
 
