--- a/public/html/main.html
+++ b/public/html/main.html
@@ -19,7 +19,7 @@
 <body>
   <div id="general-container">
 
-    <div id="topnav">
+    <nav id="top-nav">
       <a id="top-logo" class="active" href="/">
         <img src="/img/AudioCAve_Logo_Blue_Red.png" alt="">
         <h1>Audiocave</h1>
@@ -36,9 +36,9 @@
       </div>
 
       <i id="hamburger" class="fa fa-bars" onclick="hamburger()"></i>
-    </div>
+    </nav>
 
-    <div id="left-bar">
+    <nav id="left-nav">
       <br>
       <div id="logo">
         <img src="/img/AudioCAve_Logo_Blue_Red.png" alt="">
@@ -76,9 +76,9 @@
       <br>
       <a href="/logout">Logout</a>
       <br>
-    </div>
+    </nav>
 
-    <div id="main">
+    <main>
       <div id="timeline">
         <h1>Timeline</h1>
         <div id="post-container">
@@ -117,14 +117,14 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
 
-    <div id="right-bar">
+    <nav id="right-nav">
       <h1>Suggestions</h1>
       <div id="music-suggestion-container">
 
       </div>
-    </div>
+    </nav>
 
   </div>
   <script src="/js/musicsuggestion.js"></script>
