--- a/public/html/userprofile.html
+++ b/public/html/userprofile.html
@@ -17,7 +17,7 @@
 <body>
   <div id="general-container">
 
-    <div id="topnav">
+    <nav id="top-nav">
       <a id="top-logo" class="active" href="/">
         <img src="/img/AudioCAve_Logo_Blue_Red.png" alt="">
         <h1>Audiocave</h1>
@@ -34,9 +34,9 @@
       </div>
 
       <i id="hamburger" class="fa fa-bars" onclick="hamburger()"></i>
-    </div>
+    </nav>
 
-    <div id="left-bar">
+    <nav id="left-nav">
       <br>
       <div id="logo">
         <img src="/img/AudioCAve_Logo_Blue_Red.png" alt="">
@@ -74,52 +74,45 @@
       <br>
       <a href="/logout">Logout</a>
       <br>
-    </div>
+    </nav>
 
-    <div id="main">
-      <div class="center">
-        <form class="info" id="upload-images-form">
-          <div>
-            <div class="upload-btn-wrapper">
-              <label>
-                  <input id="image-upload" type="file" accept="image/png, image/gif, image/jpeg" multiple="multiple" />
-                <p class="btn">Upload a Profile Picture</p>
-            </label>
-              <br>
-              <input id="submit" type="submit" value="Submit" />
-            </div>
-          </div>
-        </form>
+    <main>
+      <div id="profile">
+        <div id="profile-picture">
+          <img src="/img/default.img" alt="User Profile">
+          <label class="image-upload-wrapper">
+            <input id="image-upload" type="file" accept="image/png, image/gif, image/jpeg, image/jpg" />
+           <p>Upload Image</p>
+          </label>
+          <input id="submit" type="submit" value="Apply" />
+        </div>
+
+        <div id="username">
+          <h1>Username</h1>
+        </div>
       </div>
 
-      <div>
-        <img class="image" src="./img/default.img" alt="User Profile" style="width:300px;height:300px;" id="profile-picture">
+      <div id="email">
+        <h1>Email</h1>
       </div>
 
-      <div class="center">
+      <div id="password">
+        <h1>Password</h1>
+      </div>
+
+      <div id="age">
+        <h1>Age</h1>
+      </div>
+
+      <button id="edit-profile">Edit Profile</button>
+      <button id="edit">Edit</button>
+
+      <!-- <div class="center">
         <form name="profile" action="/updateprofile" method="post" class="info">
-          <div>
-            <label for="username">Username</label>
-          </div>
-          <input class="username" id="username" name="username" type="username" />
-          <div>
-            <label for="email">email</label>
-          </div>
-          <input id="email" name="email" type="email" />
-          <div>
-            <label for="password">password</label>
-          </div>
-          <input id="password" name="password" type="password" />
-          <div>
-            <label for="age">age</label>
-          </div>
-          <input id="age" name="age" type="age" />
-          <br>
-          <br>
-          <input id="edit" type="button" value="EDIT PROFILE" />
+          <input id="edit" type="button" value="editprofile" />
         </form>
-      </div>
-    </div>
+      </div> -->
+    </main>
   </div>
 
   <script src="js/userprofile.js"></script>
