--- a/public/html/search.html
+++ b/public/html/search.html
@@ -22,7 +22,7 @@
 
         <div id="topnav">
             <a id="top-logo" class="active" href="/">
-                <img src="/img/AudioCAve_Logo_Blue_Red.png" alt="">
+                <img src="/img/AudioCave_Logo_Blue_Red.png" alt="">
                 <h1>Audiocave</h1>
             </a>
 
@@ -77,8 +77,9 @@
             <br>
         </div>
 
-        <div id="main">
+        <div id="song-display">
             <input id="searchBar" type="text" name="search" placeholder="Search..">
+            <ul id="song-list"></ul>
         </div>
 
         <div id="right-bar">
