--- a/public/html/main.html
+++ b/public/html/main.html
@@ -127,6 +127,7 @@
   </div>
   <script src="/js/musicsuggestion.js"></script>
   <script src="/js/main.js"></script>
+  <script src="/js/easteregg.js"></script>
 </body>
 
 </html>
