--- a/public/html/library.html
+++ b/public/html/library.html
@@ -13,14 +13,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://kit.fontawesome.com/3da2767e3a.js" crossorigin="anonymous"></script>
   <link href="/img/Popcorn.png" rel="icon" type="image/x-icon" />
-  <link href="/css/main.css" rel="stylesheet" />
   <link href="/css/library.css" rel="stylesheet" />
 </head>
 
 <body>
   <div id="general-container">
 
-    <div id="topnav">
+    <nav id="top-nav">
       <a id="top-logo" class="active" href="/">
         <img src="/img/AudioCave_Logo_Blue_Red.png" alt="">
         <h1>Audiocave</h1>
@@ -37,9 +36,9 @@
       </div>
 
       <i id="hamburger" class="fa fa-bars" onclick="hamburger()"></i>
-    </div>
+    </nav>
 
-    <div id="left-bar">
+    <nav id="left-nav">
       <br>
       <div id="logo">
         <img src="/img/AudioCAve_Logo_Blue_Red.png" alt="">
@@ -75,18 +74,18 @@
       <br>
       <a href="/logout">Logout</a>
       <br>
-    </div>
+    </nav>
 
-    <div id="library">
+    <main id="library">
       <ul id="song-list"></ul>
-    </div>
+    </main>
 
-    <div id="right-bar">
+    <nav id="right-nav">
       <h1>Suggestions</h1>
       <div id="music-suggestion-container">
 
       </div>
-    </div>
+    </nav>
 
   </div>
   <script src="/js/musicsuggestion.js"></script>
