--- a/public/html/newalbums.html
+++ b/public/html/newalbums.html
@@ -13,14 +13,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://kit.fontawesome.com/3da2767e3a.js" crossorigin="anonymous"></script>
   <link href="/img/Popcorn.png" rel="icon" type="image/x-icon" />
-  <link href="/css/main.css" rel="stylesheet" />
   <link href="/css/newalbums.css" rel="stylesheet" />
 </head>
 
 <body>
   <div id="general-container">
 
-    <div id="topnav">
+    <div id="top-nav">
       <a id="top-logo" class="active" href="/">
         <img src="/img/AudioCave_Logo_Blue_Red.png" alt="">
         <h1>Audiocave</h1>
@@ -39,7 +38,7 @@
       <i id="hamburger" class="fa fa-bars" onclick="hamburger()"></i>
     </div>
 
-    <div id="left-bar">
+    <div id="left-nav">
       <br>
       <div id="logo">
         <img src="/img/AudioCAve_Logo_Blue_Red.png" alt="">
@@ -76,14 +75,15 @@
       <a href="/logout">Logout</a>
       <br>
     </div>
+
     <div id="container">
       <button id="refresh-page" onclick="window.location.reload()">Go Back</button>
       <div id="new-albums">
         <ul id="song-list"></ul>
       </div>
     </div>
-    
-    <div id="right-bar">
+
+    <div id="right-nav">
       <h1>Suggestions</h1>
       <div id="music-suggestion-container">
 
