--- a/public/html/search.html
+++ b/public/html/search.html
@@ -2,97 +2,96 @@
 <html lang="en">
 
 <head>
-    <title>Main</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Main</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-    </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+  </style>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://kit.fontawesome.com/3da2767e3a.js" crossorigin="anonymous"></script>
-    <link href="/img/Popcorn.png" rel="icon" type="image/x-icon" />
-    <link href="/css/main.css" rel="stylesheet" />
-    <link href="/css/search.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/3da2767e3a.js" crossorigin="anonymous"></script>
+  <link href="/img/Popcorn.png" rel="icon" type="image/x-icon" />
+  <link href="/css/search.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div id="general-container">
+  <div id="general-container">
 
-        <div id="topnav">
-            <a id="top-logo" class="active" href="/">
-                <img src="/img/AudioCave_Logo_Blue_Red.png" alt="">
-                <h1>Audiocave</h1>
-            </a>
+    <nav id="top-nav">
+      <a id="top-logo" class="active" href="/">
+        <img src="/img/AudioCave_Logo_Blue_Red.png" alt="">
+        <h1>Audiocave</h1>
+      </a>
 
-            <div id="top-menu">
-                <a href="/">Home</a>
-                <a href="/search">Search</a>
-                <a href="/library">Library</a>
-                <a href="/userprofile">Profile</a>
-                <a href="/new">New Albums</a>
-                <a href="/survey">Survey</a>
-                <a href="/logout">Logout</a>
-            </div>
+      <div id="top-menu">
+        <a href="/">Home</a>
+        <a href="/search">Search</a>
+        <a href="/library">Library</a>
+        <a href="/userprofile">Profile</a>
+        <a href="/new">New Albums</a>
+        <a href="/survey">Survey</a>
+        <a href="/logout">Logout</a>
+      </div>
 
-            <i id="hamburger" class="fa fa-bars" onclick="hamburger()"></i>
-        </div>
+      <i id="hamburger" class="fa fa-bars" onclick="hamburger()"></i>
+    </nav>
 
-        <div id="left-bar">
-            <br>
-            <div id="logo">
-                <img src="/img/AudioCAve_Logo_Blue_Red.png" alt="">
-                <h1>Audiocave</h1>
-            </div>
-            <br>
-            <div id="menu">
-                <a href="/">
-                    <i class="fa-solid fa-house"></i>
-                    <p>Home</p>
-                </a>
-                <a href="/search">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <p>Search</p>
-                </a>
-                <a href="/library">
-                    <i class="fa-solid fa-book"></i>
-                    <p>Library</p>
-                </a>
-                <a href="/userprofile">
-                    <i class="fa-solid fa-user"></i>
-                    <p>Profile</p>
-                </a>
-                <a href="/new">
-                    <i class="fa-solid fa-compact-disc"></i>
-                    <p>New Albums</p>
-                </a>
-                <a href="/survey">
-                    <i class="fa-solid fa-file-pen"></i>
-                    <p>Survey</p>
-                </a>
-            </div>
-            <br>
-            <a href="/logout">Logout</a>
-            <br>
-        </div>
+    <nav id="left-nav">
+      <br>
+      <div id="logo">
+        <img src="/img/AudioCAve_Logo_Blue_Red.png" alt="">
+        <h1>Audiocave</h1>
+      </div>
+      <br>
+      <div id="menu">
+        <a href="/">
+          <i class="fa-solid fa-house"></i>
+          <p>Home</p>
+        </a>
+        <a href="/search">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <p>Search</p>
+        </a>
+        <a href="/library">
+          <i class="fa-solid fa-book"></i>
+          <p>Library</p>
+        </a>
+        <a href="/userprofile">
+          <i class="fa-solid fa-user"></i>
+          <p>Profile</p>
+        </a>
+        <a href="/new">
+          <i class="fa-solid fa-compact-disc"></i>
+          <p>New Albums</p>
+        </a>
+        <a href="/survey">
+          <i class="fa-solid fa-file-pen"></i>
+          <p>Survey</p>
+        </a>
+      </div>
+      <br>
+      <a href="/logout">Logout</a>
+      <br>
+    </nav>
 
-        <div id="song-display">
-            <input id="searchBar" type="text" name="search" placeholder="Search..">
-            <ul id="song-list"></ul>
-        </div>
+    <main id="song-display">
+      <input id="searchBar" type="text" name="search" placeholder="Search..">
+      <ul id="song-list"></ul>
+    </main>
 
-        <div id="right-bar">
-            <h1>Suggestions</h1>
-            <div id="music-suggestion-container">
+    <nav id="right-nav">
+      <h1>Suggestions</h1>
+      <div id="music-suggestion-container">
 
-            </div>
-        </div>
+      </div>
+    </nav>
 
-    </div>
-    <script src="/js/musicsuggestion.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/search.js"></script>
+  </div>
+  <script src="/js/musicsuggestion.js"></script>
+  <script src="/js/main.js"></script>
+  <script src="/js/search.js"></script>
 </body>
 
 </html>
