added media queries for max-width 480px on search.html

--- a/public/html/search.html
+++ b/public/html/search.html
@@ -92,6 +92,7 @@
   <script src="/js/musicsuggestion.js"></script>
   <script src="/js/main.js"></script>
   <script src="/js/search.js"></script>
+  <script src="/js/easteregg.js"></script>
 </body>
 
 </html>
