Media Query for 480px, 1200px, and above is complete.

--- a/public/html/main.html
+++ b/public/html/main.html
@@ -11,10 +11,12 @@
   </style>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+
   <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script src="https://kit.fontawesome.com/3da2767e3a.js" crossorigin="anonymous"></script>
+  <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
   <link href="/css/main.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -26,7 +28,7 @@
         <h1>Audiocave</h1>
       </a>
 
-      <div id="top-menu">
+      <div id="top-menu" class="w3-animate-top">
         <a href="/">Home</a>
         <a href="/search">Search</a>
         <a href="/library">Library</a>
