Media Query for all necessary files are applied.

--- a/public/html/search.html
+++ b/public/html/search.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://kit.fontawesome.com/3da2767e3a.js" crossorigin="anonymous"></script>
   <link href="/img/Popcorn.png" rel="icon" type="image/x-icon" />
+  <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
   <link href="/css/search.css" rel="stylesheet" />
 </head>
 
