--- a/public/html/userprofile.html
+++ b/public/html/userprofile.html
@@ -5,6 +5,7 @@
   <title>Web App</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
   <link href="../css/userprofile.css" rel="stylesheet" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
