Added survey to library page Fixed hamburger menu's errors across all pages

--- a/public/html/library.html
+++ b/public/html/library.html
@@ -15,9 +15,42 @@
   <link href="/img/Popcorn.png" rel="icon" type="image/x-icon" />
   <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
   <link href="/css/library.css" rel="stylesheet" />
+  <link href="/css/survey.css" rel="stylesheet" />
 </head>
 
 <body>
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="close">&times;</span>
+        <h2>Daily Survey</h2>
+      </div>
+      <form id="daily-survey" action="/daily-survey" method="post">
+        <div class="modal-body">
+          <h2>How are you feeling today?</h2>
+          <input type="radio" id="angry" name="mood" value="Angry">
+          <label for="angry">Angry</label><br>
+          <input type="radio" id="excited" name="mood" value="Excited">
+          <label for="excited">Excited</label><br>
+          <input type="radio" id="happy" name="mood" value="Happy">
+          <label for="happy">Happy</label><br>
+          <input type="radio" id="neutral" name="mood" value="Neutral">
+          <label for="neutral">Neutral</label><br>
+          <input type="radio" id="sad" name="mood" value="Sad">
+          <label for="sad">Sad</label><br>
+          <input type="radio" id="stressed" name="mood" value="Stressed">
+          <label for="stressed">Stressed</label><br>
+          <button type="button" onclick="document.getElementById('myModal').style.display='none'"
+            class="cancelbtn">Cancel</button>
+          <button id="submit-survey" type="button" class="submitbtn">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
   <div id="general-container">
 
     <nav id="top-nav">
@@ -32,7 +65,7 @@
         <a href="/library">Library</a>
         <a href="/userprofile">Profile</a>
         <a href="/new">New Albums</a>
-        <a href="/survey">Survey</a>
+        <a class="myBtn">Survey</a>
         <a href="/logout">Logout</a>
       </div>
 
@@ -67,7 +100,7 @@
           <i class="fa-solid fa-compact-disc"></i>
           <p>New Albums</p>
         </a>
-        <a href="/survey">
+        <a class="myBtn">
           <i class="fa-solid fa-file-pen"></i>
           <p>Survey</p>
         </a>
@@ -90,8 +123,8 @@
 
   </div>
   <script src="/js/musicsuggestion.js"></script>
-  <script src="/js/main.js"></script>
   <script src="/js/library.js"></script>
+  <script src="/js/survey.js"></script>
 </body>
 
 </html>
